--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gerenciar Produtos</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Roboto', Arial, sans-serif; padding: 20px; background-color: #f5f5f5; }
     h1, h3 { text-align: center; color: #333; }
@@ -42,7 +42,7 @@
   <div id="main-content">
     <h1>Adicionar Produto</h1>
     <form id="form-produto" enctype="multipart/form-data">
-      <input type="text" name="nome" placeholder="Nome do produto" required />
+      <input type="text" name="nome" placeholder="Nome do produto" required>
       <select name="categoria" required>
         <option value="" disabled selected>Selecione uma categoria</option>
         <option value="eletronicos">Eletrônicos</option>
@@ -65,9 +65,9 @@
         <option value="mercadolivre">Mercado Livre</option>
         <option value="alibaba">Alibaba</option>
       </select>
-      <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+" />
-      <input type="number" name="preco" placeholder="Preço do produto (ex.: 99.99)" step="0.01" min="0" required />
-      <input type="file" name="imagens" accept="image/*" multiple />
+      <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+">
+      <input type="number" name="preco" placeholder="Preço do produto (ex.: 99.99)" step="0.01" min="0" required>
+      <input type="file" name="imagens" accept="image/*" multiple>
       <button type="submit">Adicionar</button>
     </form>
     <div id="mensagem"></div>
@@ -93,7 +93,7 @@
 
     <div id="github-sync">
       <h3>Sincronizar com GitHub</h3>
-      <input type="password" id="github-token" placeholder="GitHub Personal Access Token" required />
+      <input type="password" id="github-token" placeholder="GitHub Personal Access Token" required>
       <textarea id="json-text" readonly></textarea>
       <button onclick="atualizarGitHub()">Atualizar produtos.json no GitHub</button>
       <textarea id="import-json" placeholder="Cole o JSON para importar"></textarea>
@@ -112,4 +112,369 @@
   </div>
 
   <script>
-   
+    let produtos = [];
+    let currentImages = [];
+    let currentImageIndex = 0;
+
+    // Inicializar produtos do localStorage
+    try {
+      const storedProdutos = localStorage.getItem('produtos');
+      produtos = storedProdutos ? JSON.parse(storedProdutos) : [];
+      if (!Array.isArray(produtos)) produtos = [];
+    } catch (e) {
+      console.error('Erro ao carregar produtos do localStorage:', e);
+      produtos = [];
+    }
+
+    function configurarEventos() {
+      const formProduto = document.getElementById('form-produto');
+      if (!formProduto) {
+        console.error('Elemento DOM não encontrado: #form-produto');
+        return;
+      }
+      formProduto.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        e.stopPropagation(); // Evitar interferência de extensões como MetaMask
+        const mensagem = document.getElementById('mensagem');
+        const erro = document.getElementById('erro');
+        if (!mensagem || !erro) {
+          console.error('Elementos DOM não encontrados: #mensagem ou #erro');
+          return;
+        }
+        const nome = e.target.querySelector('input[name="nome"]').value;
+        const categoria = e.target.querySelector('select[name="categoria"]').value;
+        const loja = e.target.querySelector('select[name="loja"]').value;
+        const link = e.target.querySelector('input[name="link"]').value;
+        const preco = e.target.querySelector('input[name="preco"]').value;
+        const imagens = e.target.querySelector('input[name="imagens"]').files;
+
+        if (!nome || !categoria || !loja || !link || !preco) {
+          erro.textContent = 'Todos os campos são obrigatórios!';
+          mensagem.textContent = '';
+          return;
+        }
+        if (parseFloat(preco) < 0) {
+          erro.textContent = 'O preço deve ser um valor positivo!';
+          mensagem.textContent = '';
+          return;
+        }
+        if (imagens.length === 0) {
+          erro.textContent = 'Pelo menos uma imagem deve ser escolhida!';
+          mensagem.textContent = '';
+          return;
+        }
+        if (imagens.length > 3) {
+          erro.textContent = 'Máximo de 3 imagens por produto!';
+          mensagem.textContent = '';
+          return;
+        }
+
+        try {
+          const imagensArray = await Promise.all(
+            Array.from(imagens).map(async (file) => {
+              const resizedBlob = await resizeImage(file, 300, 300);
+              return new Promise((resolve, reject) => {
+                const reader = new FileReader();
+                reader.onload = () => resolve(reader.result);
+                reader.onerror = () => reject(new Error('Erro ao ler imagem.'));
+                reader.readAsDataURL(resizedBlob);
+              });
+            })
+          );
+
+          const novoProduto = { nome, categoria, loja, link, preco, imagens: imagensArray };
+          produtos.push(novoProduto);
+          localStorage.setItem('produtos', JSON.stringify(produtos));
+          atualizarJSON();
+          atualizarListaProdutos();
+          mensagem.textContent = 'Produto adicionado! Clique em "Atualizar produtos.json no GitHub" para sincronizar.';
+          erro.textContent = '';
+          e.target.reset();
+        } catch (error) {
+          console.error('Erro ao adicionar produto:', error);
+          erro.textContent = error.message || 'Erro ao processar as imagens. Tente novamente.';
+          mensagem.textContent = '';
+        }
+      });
+
+      const imageModal = document.getElementById('imageModal');
+      if (!imageModal) {
+        console.error('Elemento DOM não encontrado: #imageModal');
+        return;
+      }
+      imageModal.addEventListener('click', (e) => {
+        if (e.target === e.currentTarget) closeModal();
+      });
+    }
+
+    async function resizeImage(file, maxWidth, maxHeight) {
+      return new Promise((resolve, reject) => {
+        if (file.size > 2 * 1024 * 1024) {
+          reject(new Error('Imagem muito grande. Máximo 2 MB.'));
+          return;
+        }
+        const img = new Image();
+        img.src = URL.createObjectURL(file);
+        img.onload = () => {
+          const canvas = document.createElement('canvas');
+          let width = img.width;
+          let height = img.height;
+          if (width > height) {
+            if (width > maxWidth) {
+              height = Math.round((height * maxWidth) / width);
+              width = maxWidth;
+            }
+          } else {
+            if (height > maxHeight) {
+              width = Math.round((width * maxHeight) / height);
+              height = maxHeight;
+            }
+          }
+          canvas.width = width;
+          canvas.height = height;
+          const ctx = canvas.getContext('2d');
+          ctx.drawImage(img, 0, 0, width, height);
+          canvas.toBlob((blob) => resolve(blob), 'image/jpeg', 0.8);
+        };
+        img.onerror = () => reject(new Error('Erro ao carregar imagem.'));
+      });
+    }
+
+    function atualizarJSON() {
+      const jsonText = document.getElementById('json-text');
+      if (!jsonText) {
+        console.error('Elemento DOM não encontrado: #json-text');
+        return;
+      }
+      try {
+        jsonText.value = JSON.stringify(produtos, null, 2);
+      } catch (e) {
+        console.error('Erro ao atualizar JSON:', e);
+        const erro = document.getElementById('erro');
+        if (erro) erro.textContent = 'Erro ao gerar JSON. Tente novamente.';
+      }
+    }
+
+    function atualizarListaProdutos() {
+      const listaProdutos = document.getElementById('lista-produtos');
+      if (!listaProdutos) {
+        console.error('Elemento DOM não encontrado: #lista-produtos');
+        return;
+      }
+      listaProdutos.innerHTML = '';
+      if (produtos.length === 0) {
+        listaProdutos.innerHTML = '<tr><td colspan="7">Nenhum produto cadastrado.</td></tr>';
+        return;
+      }
+      produtos.forEach((produto, index) => {
+        const tr = document.createElement('tr');
+        const imagens = produto.imagens && produto.imagens.length > 0 ? produto.imagens : [];
+        const precoFormatado = produto.preco ? R$ ${parseFloat(produto.preco).toFixed(2).replace('.', ',')} : 'R$ 0,00';
+        tr.innerHTML = 
+          <td>${produto.nome}</td>
+          <td>${produto.categoria}</td>
+          <td>${produto.loja}</td>
+          <td><a href="${produto.link}" target="_blank">Link</a></td>
+          <td>${precoFormatado}</td>
+          <td>${imagens.length > 0 ? imagens.map((img, i) => <img src="${img}" alt="Imagem ${i + 1}" class="thumbnail" onclick="openModal(${index}, ${i})">).join('') : 'Nenhuma imagem'}</td>
+          <td><button class="excluir" onclick="excluirProduto(${index})">Excluir</button></td>
+        ;
+        listaProdutos.appendChild(tr);
+      });
+    }
+
+    function openModal(produtoIndex, imageIndex) {
+      const modal = document.getElementById('imageModal');
+      const carrosselImagens = document.getElementById('modalCarrosselImagens');
+      const carrosselDots = document.getElementById('modalCarrosselDots');
+      if (!modal || !carrosselImagens || !carrosselDots) {
+        console.error('Elementos DOM não encontrados para o modal');
+        return;
+      }
+      currentImages = produtos[produtoIndex].imagens || [];
+      currentImageIndex = imageIndex;
+
+      if (currentImages.length === 0) return;
+
+      carrosselImagens.innerHTML = currentImages.map((img) => <img src="${img}" alt="Imagem ampliada">).join('');
+      carrosselImagens.style.transform = translateX(-${currentImageIndex * 100}%);
+      carrosselDots.innerHTML = currentImages.map((_, i) => <span class="carrossel-dot ${i === currentImageIndex ? 'ativo' : ''}" onclick="setModalCarrosselImage(${i})"></span>).join('');
+      modal.style.display = 'flex';
+    }
+
+    function moveModalCarrossel(direction) {
+      const carrosselImagens = document.getElementById('modalCarrosselImagens');
+      const carrosselDots = document.getElementById('modalCarrosselDots').children;
+      if (!carrosselImagens || !carrosselDots) {
+        console.error('Elementos DOM não encontrados para o carrossel');
+        return;
+      }
+      const totalImagens = currentImages.length;
+      currentImageIndex = (currentImageIndex + direction + totalImagens) % totalImagens;
+      carrosselImagens.style.transform = translateX(-${currentImageIndex * 100}%);
+      Array.from(carrosselDots).forEach((dot, i) => dot.classList.toggle('ativo', i === currentImageIndex));
+    }
+
+    function setModalCarrosselImage(index) {
+      const carrosselImagens = document.getElementById('modalCarrosselImagens');
+      const carrosselDots = document.getElementById('modalCarrosselDots').children;
+      if (!carrosselImagens || !carrosselDots) {
+        console.error('Elementos DOM não encontrados para o carrossel');
+        return;
+      }
+      currentImageIndex = index;
+      carrosselImagens.style.transform = translateX(-${currentImageIndex * 100}%);
+      Array.from(carrosselDots).forEach((dot, i) => dot.classList.toggle('ativo', i === currentImageIndex));
+    }
+
+    function closeModal() {
+      const modal = document.getElementById('imageModal');
+      if (!modal) {
+        console.error('Elemento DOM não encontrado: #imageModal');
+        return;
+      }
+      modal.style.display = 'none';
+      currentImages = [];
+      currentImageIndex = 0;
+    }
+
+    function excluirProduto(index) {
+      const mensagem = document.getElementById('mensagem');
+      const erro = document.getElementById('erro');
+      if (!mensagem || !erro) {
+        console.error('Elementos DOM não encontrados: #mensagem ou #erro');
+        return;
+      }
+      try {
+        produtos.splice(index, 1);
+        localStorage.setItem('produtos', JSON.stringify(produtos));
+        atualizarJSON();
+        atualizarListaProdutos();
+        mensagem.textContent = 'Produto excluído! Clique em "Atualizar produtos.json no GitHub" para sincronizar.';
+        erro.textContent = '';
+      } catch (e) {
+        console.error('Erro ao excluir produto:', e);
+        erro.textContent = 'Erro ao excluir produto. Tente novamente.';
+      }
+    }
+
+    async function atualizarGitHub() {
+      const token = document.getElementById('github-token')?.value.trim();
+      const jsonText = document.getElementById('json-text')?.value;
+      const mensagem = document.getElementById('mensagem');
+      const erro = document.getElementById('erro');
+      if (!mensagem || !erro) {
+        console.error('Elementos DOM não encontrados: #mensagem ou #erro');
+        return;
+      }
+      if (!token) {
+        erro.textContent = 'Por favor, insira o GitHub Personal Access Token!';
+        mensagem.textContent = '';
+        return;
+      }
+      if (!jsonText) {
+        erro.textContent = 'JSON dos produtos não encontrado!';
+        mensagem.textContent = '';
+        return;
+      }
+
+      try {
+        const parsedJson = JSON.parse(jsonText);
+        if (!Array.isArray(parsedJson)) {
+          throw new Error('JSON inválido! Deve ser uma lista de produtos.');
+        }
+
+        let sha = null;
+        const getResponse = await fetch('https://api.github.com/repos/bingaby/centrodecompra/contents/produtos.json', {
+          method: 'GET',
+          headers: {
+            'Authorization': Bearer ${token},
+            'Accept': 'application/vnd.github.v3+json',
+            'Content-Type': 'application/json'
+          }
+        });
+
+        if (getResponse.ok) {
+          const fileData = await getResponse.json();
+          sha = fileData.sha;
+        } else if (getResponse.status !== 404) {
+          const errorData = await getResponse.json();
+          throw new Error(Erro ao verificar produtos.json: ${errorData.message || getResponse.statusText});
+        }
+
+        const content = btoa(unescape(encodeURIComponent(jsonText)));
+        const updateResponse = await fetch('https://api.github.com/repos/bingaby/centrodecompra/contents/produtos.json', {
+          method: 'PUT',
+          headers: {
+            'Authorization': Bearer ${token},
+            'Accept': 'application/vnd.github.v3+json',
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            message: 'Atualiza produtos.json via admin',
+            content: content,
+            sha: sha,
+            branch: 'main'
+          })
+        });
+
+        if (updateResponse.ok) {
+          mensagem.textContent = 'produtos.json atualizado no GitHub! Os produtos devem aparecer na página principal em alguns minutos.';
+          erro.textContent = '';
+        } else {
+          const errorData = await updateResponse.json();
+          throw new Error(Erro ao atualizar produtos.json: ${errorData.message || updateResponse.statusText});
+        }
+      } catch (error) {
+        console.error('Erro ao sincronizar com o GitHub:', error);
+        erro.textContent = error.message || 'Erro ao sincronizar com o GitHub. Verifique o token e tente novamente.';
+        mensagem.textContent = '';
+      }
+    }
+
+    function importarJSON() {
+      const importText = document.getElementById('import-json')?.value;
+      const mensagem = document.getElementById('mensagem');
+      const erro = document.getElementById('erro');
+      if (!mensagem || !erro) {
+        console.error('Elementos DOM não encontrados: #mensagem ou #erro');
+        return;
+      }
+      if (!importText) {
+        erro.textContent = 'Por favor, insira o JSON para importar!';
+        mensagem.textContent = '';
+        return;
+      }
+      try {
+        const importedProdutos = JSON.parse(importText);
+        if      if (!Array.isArray(importedProdutos)) throw new Error('JSON inválido! Deve ser uma lista de produtos.');
+        produtos = importedProdutos;
+        localStorage.setItem('produtos', JSON.stringify(produtos));
+        atualizarJSON();
+        atualizarListaProdutos();
+        mensagem.textContent = 'Produtos importados com sucesso! Clique em "Atualizar produtos.json no GitHub" para sincronizar.';
+        erro.textContent = '';
+        document.getElementById('import-json').value = '';
+      } catch (error) {
+        console.error('Erro ao importar JSON:', error);
+        erro.textContent = error.message || 'Erro ao importar JSON. Verifique o formato e tente novamente.';
+        mensagem.textContent = '';
+      }
+    }
+
+    // Inicializar após o DOM estar carregado
+    document.addEventListener('DOMContentLoaded', () => {
+      console.log('DOM carregado, inicializando admin-xyz-123.html');
+      const criticalElements = ['form-produto', 'imageModal', 'lista-produtos', 'json-text', 'import-json'];
+      const missingElements = criticalElements.filter((id) => !document.getElementById(id));
+      if (missingElements.length > 0) {
+        console.error('Elementos DOM críticos não encontrados:', missingElements);
+        return;
+      }
+      configurarEventos();
+      atualizarJSON();
+      atualizarListaProdutos();
+    });
+  </script>
+</body>
+</html>
