--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -134,7 +134,7 @@
       }
       formProduto.addEventListener('submit', async (e) => {
         e.preventDefault();
-        e.stopPropagation(); // Evitar interferência de extensões como MetaMask
+        e.stopPropagation();
         const mensagem = document.getElementById('mensagem');
         const erro = document.getElementById('erro');
         if (!mensagem || !erro) {
@@ -170,24 +170,62 @@
         }
 
         try {
-          const imagensArray = await Promise.all(
-            Array.from(imagens).map(async (file) => {
-              const resizedBlob = await resizeImage(file, 300, 300);
-              return new Promise((resolve, reject) => {
-                const reader = new FileReader();
-                reader.onload = () => resolve(reader.result);
-                reader.onerror = () => reject(new Error('Erro ao ler imagem.'));
-                reader.readAsDataURL(resizedBlob);
-              });
-            })
-          );
+          const token = document.getElementById('github-token')?.value.trim();
+          if (!token) {
+            erro.textContent = 'Insira o GitHub Personal Access Token para fazer upload das imagens!';
+            mensagem.textContent = '';
+            return;
+          }
 
-          const novoProduto = { nome, categoria, loja, link, preco, imagens: imagensArray };
+          // Gerar nomes únicos para as imagens e fazer upload
+          const imagensPaths = [];
+          const imagensDataUrls = []; // Para exibição local
+          const timestamp = Date.now();
+          for (let i = 0; i < imagens.length; i++) {
+            const file = imagens[i];
+            const fileName = `produto_${nome.replace(/\s+/g, '-').toLowerCase()}-${timestamp}-${i + 1}.jpg`;
+            const resizedBlob = await resizeImage(file, 300, 300);
+
+            // Gerar Data URL para exibição local
+            const reader = new FileReader();
+            const dataUrl = await new Promise((resolve, reject) => {
+              reader.onload = () => resolve(reader.result);
+              reader.onerror = () => reject(new Error('Erro ao ler imagem.'));
+              reader.readAsDataURL(resizedBlob);
+            });
+            imagensDataUrls.push(dataUrl);
+
+            // Fazer upload da imagem para /imagens/
+            const content = dataUrl.split(',')[1]; // Remove "data:image/jpeg;base64,"
+            const response = await fetch(`https://api.github.com/repos/bingaby/centrodecompra/contents/imagens/${fileName}`, {
+              method: 'PUT',
+              headers: {
+                'Authorization': `Bearer ${token}`,
+                'Accept': 'application/vnd.github.v3+json',
+                'Content-Type': 'application/json'
+              },
+              body: JSON.stringify({
+                message: `Adiciona imagem ${fileName}`,
+                content: content,
+                branch: 'main'
+              })
+            });
+
+            if (!response.ok) {
+              const errorData = await response.json();
+              throw new Error(`Erro ao fazer upload da imagem ${fileName}: ${errorData.message || response.statusText}`);
+            }
+
+            imagensPaths.push(`/imagens/${fileName}`);
+          }
+
+          // Adicionar produto com caminhos das imagens
+          const novoProduto = { nome, categoria, loja, link, preco, imagens: imagensPaths };
           produtos.push(novoProduto);
           localStorage.setItem('produtos', JSON.stringify(produtos));
           atualizarJSON();
-          atualizarListaProdutos();
-          mensagem.textContent = 'Produto adicionado! Clique em "Atualizar produtos.json no GitHub" para sincronizar.';
+          atualizarListaProdutos(imagensDataUrls);
+          mensagem.textContent = 'Produto adicionado e imagens enviadas! Clique em "Atualizar produtos.json no GitHub" para sincronizar.';
           erro.textContent = '';
           e.target.reset();
         } catch (error) {
@@ -255,7 +293,7 @@
       }
     }
 
-    function atualizarListaProdutos() {
+    function atualizarListaProdutos(imagensDataUrls = []) {
       const listaProdutos = document.getElementById('lista-produtos');
       if (!listaProdutos) {
         console.error('Elemento DOM não encontrado: #lista-produtos');
@@ -269,16 +307,16 @@
       produtos.forEach((produto, index) => {
         const tr = document.createElement('tr');
         const imagens = produto.imagens && produto.imagens.length > 0 ? produto.imagens : [];
-        const precoFormatado = produto.preco ? R$ ${parseFloat(produto.preco).toFixed(2).replace('.', ',')} : 'R$ 0,00';
-        tr.innerHTML = 
+        const precoFormatado = produto.preco ? `R$ ${parseFloat(produto.preco).toFixed(2).replace('.', ',')}` : 'R$ 0,00';
+        tr.innerHTML = `
           <td>${produto.nome}</td>
           <td>${produto.categoria}</td>
           <td>${produto.loja}</td>
           <td><a href="${produto.link}" target="_blank">Link</a></td>
           <td>${precoFormatado}</td>
-          <td>${imagens.length > 0 ? imagens.map((img, i) => <img src="${img}" alt="Imagem ${i + 1}" class="thumbnail" onclick="openModal(${index}, ${i})">).join('') : 'Nenhuma imagem'}</td>
+          <td>${imagens.length > 0 ? imagens.map((img, i) => `<img src="${imagensDataUrls[i] || img}" alt="Imagem ${i + 1}" class="thumbnail" onclick="openModal(${index}, ${i})">`).join('') : 'Nenhuma imagem'}</td>
           <td><button class="excluir" onclick="excluirProduto(${index})">Excluir</button></td>
-        ;
+        `;
         listaProdutos.appendChild(tr);
       });
     }
@@ -296,9 +334,9 @@
 
       if (currentImages.length === 0) return;
 
-      carrosselImagens.innerHTML = currentImages.map((img) => <img src="${img}" alt="Imagem ampliada">).join('');
-      carrosselImagens.style.transform = translateX(-${currentImageIndex * 100}%);
-      carrosselDots.innerHTML = currentImages.map((_, i) => <span class="carrossel-dot ${i === currentImageIndex ? 'ativo' : ''}" onclick="setModalCarrosselImage(${i})"></span>).join('');
+      carrosselImagens.innerHTML = currentImages.map((img) => `<img src="${img}" alt="Imagem ampliada">`).join('');
+      carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
+      carrosselDots.innerHTML = currentImages.map((_, i) => `<span class="carrossel-dot ${i === currentImageIndex ? 'ativo' : ''}" onclick="setModalCarrosselImage(${i})"></span>`).join('');
       modal.style.display = 'flex';
     }
 
@@ -311,7 +349,7 @@
       }
       const totalImagens = currentImages.length;
       currentImageIndex = (currentImageIndex + direction + totalImagens) % totalImagens;
-      carrosselImagens.style.transform = translateX(-${currentImageIndex * 100}%);
+      carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
       Array.from(carrosselDots).forEach((dot, i) => dot.classList.toggle('ativo', i === currentImageIndex));
     }
 
@@ -323,7 +361,7 @@
         return;
       }
       currentImageIndex = index;
-      carrosselImagens.style.transform = translateX(-${currentImageIndex * 100}%);
+      carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
       Array.from(carrosselDots).forEach((dot, i) => dot.classList.toggle('ativo', i === currentImageIndex));
     }
 
@@ -388,7 +426,7 @@
         const getResponse = await fetch('https://api.github.com/repos/bingaby/centrodecompra/contents/produtos.json', {
           method: 'GET',
           headers: {
-            'Authorization': Bearer ${token},
+            'Authorization': `Bearer ${token}`,
             'Accept': 'application/vnd.github.v3+json',
             'Content-Type': 'application/json'
           }
@@ -399,14 +437,14 @@
           sha = fileData.sha;
         } else if (getResponse.status !== 404) {
           const errorData = await getResponse.json();
-          throw new Error(Erro ao verificar produtos.json: ${errorData.message || getResponse.statusText});
+          throw new Error(`Erro ao verificar produtos.json: ${errorData.message || getResponse.statusText}`);
         }
 
         const content = btoa(unescape(encodeURIComponent(jsonText)));
         const updateResponse = await fetch('https://api.github.com/repos/bingaby/centrodecompra/contents/produtos.json', {
           method: 'PUT',
           headers: {
-            'Authorization': Bearer ${token},
+            'Authorization': `Bearer ${token}`,
             'Accept': 'application/vnd.github.v3+json',
             'Content-Type': 'application/json'
           },
@@ -423,7 +461,7 @@
           erro.textContent = '';
         } else {
           const errorData = await updateResponse.json();
-          throw new Error(Erro ao atualizar produtos.json: ${errorData.message || updateResponse.statusText});
+          throw new Error(`Erro ao atualizar produtos.json: ${errorData.message || updateResponse.statusText}`);
         }
       } catch (error) {
         console.error('Erro ao sincronizar com o GitHub:', error);
@@ -447,7 +485,7 @@
       }
       try {
         const importedProdutos = JSON.parse(importText);
-        if      if (!Array.isArray(importedProdutos)) throw new Error('JSON inválido! Deve ser uma lista de produtos.');
+        if (!Array.isArray(importedProdutos)) throw new Error('JSON inválido! Deve ser uma lista de produtos.');
         produtos = importedProdutos;
         localStorage.setItem('produtos', JSON.stringify(produtos));
         atualizarJSON();
